Fix nav wrapping issue on 'About' page

--- a/about-styles.css
+++ b/about-styles.css
@@ -34,8 +34,10 @@ header {
 }
 
 nav {
+  font-size: 3vw;
   grid-area: nav;
-  margin: 30px auto;
+  margin: 10px auto;
+  max-width: 100vw;
 }
 
 nav > ul li {
@@ -43,8 +45,8 @@ nav > ul li {
   margin: auto;
   border-left: 1px solid black;
   border-right: 1px solid black;
-  width: 100px;
-  padding: 0 12px;
+  width: 18vw;
+  padding: 0px 2vw;
   text-align: center;
 }
 
