--- a/queries.css
+++ b/queries.css
@@ -11,9 +11,10 @@
   }
 
   nav {
-    font-size: 2.5vw;
+    font-size: 3vw;
     grid-area: nav;
     margin: 10px auto;
+    max-width: 100vw;
   }
 
   nav > ul li {
